WGS-416: Align style and order of metadata between author listing and related content in blogs Fix Author content CSS

--- a/sites/all/themes/effoundationtheme/css/blog-presentation.css
+++ b/sites/all/themes/effoundationtheme/css/blog-presentation.css
@@ -63,10 +63,11 @@ h1 .title-blog-presentation{
 }
 
 .view-display-id-page_2 .published-at{
-	border-right: 1px solid #F7931E;
+	border-right: 1px solid #2d68aa;
     padding: 0px 10px 0px 0px;
     margin: 0px 10px 0px 0px;
     float: left;
+    color:#8f8f8f;
 }
 
 .view-display-id-page_2 .authors-as-metadata p:first-child{
@@ -76,6 +77,7 @@ h1 .title-blog-presentation{
 .view-display-id-page_2 .authors-as-metadata p.data-and-read{
 	font-size: 0.8em;
     padding-top: 5px;
+    color: #f7931e;
 }
 
 
@@ -323,7 +325,29 @@ section.large-12.columns.blog-presentation-content > div.topic-abstract{
 }
 
 .view-authors-as-metadata .authors-as-metadata a{
-    line-height: 20px;
+    font-weight: bold;
+    display: block!important;
+    padding: 8px 20px 0px 0px;
+    width: 100%;
+    margin: 0px 0px 0px 0px;
+    letter-spacing: -0.04em;
+}
+
+.view-authors-as-metadata .authors-as-metadata a:before{
+    font-family: 'ef-icon-font';
+    speak: none;
+    font-style: normal;
+    font-weight: normal!important;
+    font-variant: normal;
+    text-transform: none;
+    vertical-align: top!important;
+    margin-right: -20px;
+    font-size: 1.5em;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    content: "\e61c";
+    float: right;
+    display: inline;
 }
 
 
